# op-rs

./: .gitignore  Cargo.toml  Justfile  README.md  rustfmt.toml
.github/workflows/: dependencies.yml  integration.yml  lint.yml  unit.yml
crates/derive/: Cargo.toml
crates/derive/src/: blob_provider.rs  chain_provider.rs
crates/hera-exex/: Cargo.toml
crates/hera-exex/src/: cli.rs  exex.rs  lib.rs
crates/kona-providers/: Cargo.toml
crates/kona-providers/src/: blob_provider.rs  chain_provider.rs  lib.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: behaviour.rs  builder.rs  discovery.rs  driver.rs  handler.rs  lib.rs  op_enr.rs  ssz.rs  swarm.rs  types.rs
crates/net/src/discovery/: bootnodes.rs  builder.rs  driver.rs  mod.rs
crates/net/src/gossip/: behaviour.rs  config.rs  driver.rs  event.rs  handler.rs  mod.rs
crates/net/src/types/: address.rs  enr.rs  envelope.rs  mod.rs  payload.rs  peer.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs  types.rs
crates/providers-local/: Cargo.toml
crates/providers-local/src/: blob_provider.rs  chain_provider.rs  lib.rs
crates/rollup/: Cargo.toml
crates/rollup/src/: cli.rs  driver.rs  engine.rs  lib.rs  pipeline.rs  telemetry.rs  validator.rs
crates/rollup/src/driver/: context.rs  cursor.rs  mod.rs
crates/rollup/src/driver/context/: exex.rs  mod.rs  standalone.rs
crates/rollup/src/engine/: controller.rs  mod.rs  relay.rs  transport.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  rollup.rs  sequencer.rs
crates/ser/: Cargo.toml
crates/ser/src/: lib.rs
crates/ser/src/traits/: compressor.rs  mod.rs  providers.rs  rollup.rs  stages.rs
crates/ser/src/types/: batch_tx.rs  channel_out.rs  mod.rs  sync.rs  transaction.rs
