[package]
name = "op-net"
description = "Networking library for OP Stack Consensus"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy.workspace = true
alloy-rlp.workspace = true

# Kona
kona-primitives = { git = "https://github.com/ethereum-optimism/kona", default-features = true }

# Networking
ssz_rs.workspace = true
snap.workspace = true
futures.workspace = true
discv5.workspace = true
libp2p.workspace = true
openssl.workspace = true
libp2p-identity.workspace = true

# Misc
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
lazy_static.workspace = true
unsigned-varint.workspace = true
