[package]
name = "op-net"
description = "Networking library for OP Stack Consensus"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy.workspace = true
alloy-rlp.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Networking
snap.workspace = true
futures.workspace = true
discv5.workspace = true
libp2p.workspace = true
openssl.workspace = true
libp2p-identity.workspace = true

# Misc
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
lazy_static.workspace = true
unsigned-varint.workspace = true

# `arbitrary` feature dependencies
arbitrary = { workspace = true, optional = true }

[dev-dependencies]
arbtest.workspace = true
arbitrary.workspace = true
alloy = { workspace = true, features = ["arbitrary"] }

[features]
default = []
arbitrary = ["dep:arbitrary", "alloy/arbitrary"]
