[package]
name = "op-net"
description = "Networking library for OP Stack Consensus"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# Op Alloy
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# Networking
snap.workspace = true
futures.workspace = true
discv5.workspace = true
libp2p = { workspace = true, features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping", "yamux"] } 
openssl = { workspace = true, features = ["vendored"] }
libp2p-identity = { workspace = true, features = [ "secp256k1" ] }

# Misc
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
lazy_static.workspace = true
unsigned-varint.workspace = true

# `arbitrary` feature dependencies
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
arbtest.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }

[features]
default = []
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
