[package]
name = "p2p"
description = "Consensus P2P Stack for L2"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true

kona-primitives = { git = "https://github.com/ethereum-optimism/kona", default-features = true }
