[package]
name = "kona-providers-local"
description = "Local provider implementations for Kona trait abstractions"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
reth.workspace = true
alloy.workspace = true
alloy-rlp.workspace = true
hashbrown.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
kona-derive.workspace = true
kona-providers.workspace = true
kona-providers-alloy.workspace = true
kona-primitives.workspace = true
tracing.workspace = true
eyre.workspace = true
url.workspace = true
op-alloy-protocol.workspace = true
