[package]
name = "kona-providers-local"
description = "Local provider implementations for Kona trait abstractions"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-signer.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# Op Alloy
op-alloy-protocol.workspace = true

# Kona
kona-derive.workspace = true
kona-providers.workspace = true
kona-providers-alloy.workspace = true

# Reth
reth.workspace = true

# Misc
url.workspace = true
eyre.workspace = true
tracing.workspace = true
hashbrown.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
