[package]
name = "rollup"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# OP Stack Dependencies
kona-providers.workspace = true
kona-providers-alloy.workspace = true
kona-derive.workspace = true
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-rpc-types-engine.workspace = true
superchain = { workspace = true, default-features = false }

# Reth Dependencies
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-execution-types.workspace = true

# Telemetry
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }   
metrics-exporter-prometheus = { version = "0.15.3", features = ["http-listener"] }

# Misc 
url.workspace = true
reqwest.workspace = true
serde_json.workspace = true
eyre.workspace = true
tracing.workspace = true
clap.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
alloy.workspace = true
hashbrown.workspace = true
