[package]
name = "rollup"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-providers.workspace = true
kona-providers-alloy.workspace = true
kona-providers-local.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["ipc"] }
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types = { workspace = true, features = ["ssz"] }
alloy-rpc-types-engine.workspace = true

# Op Alloy
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Superchain
superchain = { workspace = true, default-features = false }

# Reth
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-execution-types.workspace = true

# Telemetry
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }   
metrics-exporter-prometheus = { version = "0.16.0", features = ["http-listener"] }

# Misc 
url.workspace = true
serde_json.workspace = true
eyre.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
hashbrown.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
