[package]
name = "ser"
description = "Serialization for Kona Types"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-primitives.workspace = true

# Alloy
alloy.workspace = true
op-alloy-rpc-types.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }

# Misc
rand.workspace = true
eyre.workspace = true
serde.workspace = true
tracing.workspace = true
async-trait.workspace = true

[features]
default = ["online"]
online = ["kona-derive/online"]
