[package]
name = "ser"
description = "Serialization for Kona Types"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-primitives.workspace = true

# Alloy
alloy-rlp = { workspace = true, features = ["derive"] }
op-alloy-rpc-types.workspace = true

# Misc
rand.workspace = true
eyre.workspace = true
tracing.workspace = true

[features]
default = ["online"]
online = ["kona-derive/online"]
