[package]
name = "ser"
description = "Serialization for Kona Types"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true

# Alloy
alloy-rlp = { workspace = true, features = ["derive"] }
op-alloy-rpc-types.workspace = true
op-alloy-protocol.workspace = true
op-alloy-genesis.workspace = true

# Misc
rand.workspace = true
eyre.workspace = true
tracing.workspace = true
